name:           HConcurrentLogger
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Quentin Duval

executable ConcurrencyLogger
  hs-source-dirs:  sources
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   async >=2.0.1 && <2.1,
                   concurrent-extra >=0.7.0 && <0.8,
                   stm >=2.4.2 && <2.5,
                   time >=1.4.0 && <1.5,
                   directory >=1.2.0 && <1.3,
                   deepseq >=1.3.0 && <1.4
  ghc-options:     -O2 -threaded -rtsopts -eventlog
  other-modules:   
                   ChanLogger,
                   Format,
                   SyncLogger,
                   TestCase
